--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="estiloshome.css">
     <script src="home.js" defer></script>
 </head>
 <body>
@@ -38,99 +40,103 @@
             </div>
         </section>
 
-        <section class="productos"> 
+        <!-- <section class="productos"> 
             
-                    <div class="card">
-                        <img src="img/herramienta/martillo1.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Martillo</h5>
-                        <p class="card-text">Martillo de Uña, Mango en Madera</p>
-                        <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/destornillador.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Destornilladores</h5>
-                        <p class="card-text">Combo de 2 Destornilladores</p>
-                        <p class="card-text"><small class="text-muted">Precio: $15.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/alicate.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Alicate</h5>
-                        <p class="card-text">Alicate de mango de goma</p>
-                        <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/taladro.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                            <h5 class="card-title">Taladros</h5>
-                            <p class="card-text">Taladro Percutor 1/2-pulg 800W 2600RPM</p>
-                            <p class="card-text"><small class="text-muted">Precio: $400.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/sierra.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                            <h5 class="card-title">Sierra</h5>
-                            <p class="card-text">Sierra Circular Eléctrica de 7-1/4 Pulgadas 185 mm de 1800W </p>
-                            <p class="card-text"><small class="text-muted">Precio: $450.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/pulidora.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Pulidora</h5>
-                        <p class="card-text">Pulidora 9-pulg 2'200W + Pulidora 4-1/2 pulg 700W</p>
-                        <p class="card-text"><small class="text-muted"></small></p>
-                        <p class="card-text"><small class="text-muted">Precio: $500.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/llaves.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Llaves</h5>
-                        <p class="card-text">Todo tipo de llaves para el hogar</p>
-                        <p class="card-text"><small class="text-muted">Precio: $15.000</small></p>
-                        </div>
-                    <div class="card-footer">
-                        <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/herramienta/cerradura.png" class="card-img-top" alt="maryillo">
-                        <div class="card-body">
-                        <h5 class="card-title">Cerradura</h5>
-                        <p class="card-text">Chapa Fortaleza Derecha Bronce</p>
-                        <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
-                    </div>
-                <div class="card-footer">
-                    <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            <div class="card">
+                <img src="img/herramienta/martillo1.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Martillo</h5>
+                <p class="card-text">Martillo de Uña, Mango en Madera</p>
+                <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
                 </div>
-                    </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
             </div>
-        </section>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/destornillador.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Destornilladores</h5>
+                <p class="card-text">Combo de 2 Destornilladores</p>
+                <p class="card-text"><small class="text-muted">Precio: $15.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/alicate.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Alicate</h5>
+                <p class="card-text">Alicate de mango de goma</p>
+                <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/taladro.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                    <h5 class="card-title">Taladros</h5>
+                    <p class="card-text">Taladro Percutor 1/2-pulg 800W 2600RPM</p>
+                    <p class="card-text"><small class="text-muted">Precio: $400.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/sierra.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                    <h5 class="card-title">Sierra</h5>
+                    <p class="card-text">Sierra Circular Eléctrica de 7-1/4 Pulgadas 185 mm de 1800W </p>
+                    <p class="card-text"><small class="text-muted">Precio: $450.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/pulidora.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Pulidora</h5>
+                <p class="card-text">Pulidora 9-pulg 2'200W + Pulidora 4-1/2 pulg 700W</p>
+                <p class="card-text"><small class="text-muted"></small></p>
+                <p class="card-text"><small class="text-muted">Precio: $500.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/llaves.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Llaves</h5>
+                <p class="card-text">Todo tipo de llaves para el hogar</p>
+                <p class="card-text"><small class="text-muted">Precio: $15.000</small></p>
+                </div>
+            <div class="card-footer">
+                <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/herramienta/cerradura.png" class="card-img-top" alt="maryillo">
+                <div class="card-body">
+                <h5 class="card-title">Cerradura</h5>
+                <p class="card-text">Chapa Fortaleza Derecha Bronce</p>
+                <p class="card-text"><small class="text-muted">Precio: $20.000</small></p>
+            </div>
+        <div class="card-footer">
+            <small class="text-muted"><button href="#" >Agregar al Carrito<img src="img/shopping-cart_icon-icons.com_56125.ico" alt="" width="15px" height="15px"></button></small>
+        </div>
+            </div>
+    </div>
+        </section> -->
+
+        <section id="contenedor-producto" class="inventario"></section>
     </main>
+    
+
 </body>
 </html>
